--- a/style.css
+++ b/style.css
@@ -324,7 +324,7 @@ article figure img {
   width: 100%;
 }
 article figure {
-  max-width: 30%;
+  max-width: calc(25% + 4rem);
   box-sizing: border-box;
   padding: 0.6rem;
   border: 1px solid #a2a9b1;
@@ -348,14 +348,6 @@ article figure figcaption {
 article p {
   padding-bottom: 0.5em;
   margin: 0.5em 0 0 0;
-}
-@media screen and (max-width: 425px) {
-  article figure {
-    max-width: unset;
-    width: 100% !important;
-    margin-right: 0;
-    margin-left: 0;
-  }
 }
 article table.infobox {
   float: right;
@@ -410,9 +402,9 @@ article tr.center {
   text-align: center;
 }
 @media screen and (max-width: 320px) {
-  article table.infobox {
+  article figure {
     max-width: unset;
-    width: 100%;
+    width: 60% !important;
   }
 }
 article table:not(.infobox, .ibox) {
@@ -421,8 +413,9 @@ article table:not(.infobox, .ibox) {
   border: 1px solid #a2a9b1;
   background-color: #f8f9fa;
   border-collapse: collapse;
-  margin: 0 0 0.8rem 0.8rem;
-  min-width: 40%;
+  margin: 0 0.8rem 0.8rem 0.8rem;
+  min-width: 50%;
+  width: fit-content;
   max-width: 100%;
   margin-left: 0;
 }
@@ -437,6 +430,12 @@ article table:not(.infobox, .ibox) td {
   border-collapse: collapse;
   font-size: min(1.5vw, 1rem);
   vertical-align: middle;
+}
+@media screen and (max-width: 500px){
+  article table.infobox{
+    max-width: unset;
+    width: 100%;
+    } 
 }
 article table:not(.infobox, .ibox) th {
   font-weight: bold;
@@ -477,6 +476,26 @@ article img.icon.large {
   height: 2rem;
   padding: 0.25rem 0.25rem;
   vertical-align: middle;
+}
+article .article-image-gallery{
+width: 100%;
+height: fit-content;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+}
+article .article-image-gallery figure{
+float: unset;
+flex: 1;
+min-width: calc(25% - 0.5rem);
+margin: 0.25rem;
+max-width: calc(25% - 0.5rem);
+}
+@media screen and (max-width: 500px){
+  article .article-image-gallery figure{
+    min-width: calc(50% - 0.5rem);
+max-width: calc(50% - 0.5rem);
+  }
 }
 ::-webkit-scrollbar {
   width: 10px;
@@ -1233,7 +1252,7 @@ user-select: none;
   background-color: #ddd;
 }
 #modal-gallery-nav ul#modal-gallery-nav-list li.modal-gallery-nav-item img{
-height: 100%;
+max-height: 100%;
 max-width: 100%;
 border-radius: 0.5rem;
 }
@@ -1876,4 +1895,65 @@ align-items: center;
   #currency-calc-container{
 border-radius: 0;
   }
+}
+article .article-badge{
+width: 100%;
+box-sizing: border-box;
+border-left-width: 10px;
+border-left-style: solid;
+position: relative;
+margin-bottom: 0.75rem;
+}
+article .article-badge.awarded{
+border-left-color: #662483;
+}
+article .article-badge.improvable{
+border-left-color: #971414;
+}
+article .article-badge.outdated{
+border-left-color: #FFA500;
+}
+article .article-badge .content{
+border: 1px solid #a2a9b1;
+border-left: 0;
+width: 100%;
+height: 100%;
+box-sizing: border-box;
+display: flex;
+background-color: #f8f9fa;
+flex-direction: row;
+}
+article .article-badge .content .text{
+height: 100%;
+width: calc(100% - 75px);
+box-sizing: border-box;
+padding: 1rem 1rem 1rem 0;
+}
+article .article-badge .content .text p{
+  font-size: 0.75rem;
+}
+article .article-badge .content .text h2{
+padding: 0;
+border: 0;
+margin: 0;
+font-weight: 700;
+font-size: 1.25rem;
+}
+article .article-badge .content .icon{
+width: 75px;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+article .article-badge .content .icon i{
+font-size: 3rem;
+}
+article .article-badge.awarded .content .icon img{
+width: 25px;
+}
+article .article-badge.outdated .content .icon img{
+width: 40px;
+}
+article .article-badge.improvable .content .icon img{
+width: 30px;
 }
