--- a/style.css
+++ b/style.css
@@ -479,10 +479,16 @@ body {
   padding: 0 0.25rem;
   vertical-align: middle;
   }
+  article img.icon.medium, .modal img.icon.medium {
+  display: inline;
+  height: 1.5rem;
+  padding: 0.1rem 0.25rem;
+  vertical-align: middle;
+  }
   article img.icon.large, .modal img.icon.large {
   display: inline;
   height: 2rem;
-  padding: 0.25rem 0.25rem;
+  padding: 0.25rem;
   vertical-align: middle;
   }
   article .article-image-gallery{
@@ -1280,7 +1286,6 @@ body {
   #modal-gallery-nav ul#modal-gallery-nav-list li.modal-gallery-nav-item img{
   max-height: 100%;
   max-width: 100%;
-  border-radius: 0.5rem;
   }
 
   #modal-gallery-nav ul#modal-gallery-nav-list::-webkit-scrollbar, .modal::-webkit-scrollbar{
