--- a/style.css
+++ b/style.css
@@ -2288,6 +2288,9 @@ padding: 0.25rem;
 margin-bottom: 0;
 font-family: monospace;
 }
+#preview-container #modal-container{
+position: absolute;
+}
   #preview-container{
   max-width: 1200px;
   width: calc(100% - 686px);
@@ -2589,17 +2592,17 @@ background-color: #f8f9fa;
   border: 1px solid #a2a9b1;
 }
 
-#source-code pre::-webkit-scrollbar, #editor-container::-webkit-scrollbar{
+#source-code pre::-webkit-scrollbar, #editor-container::-webkit-scrollbar, #dictionary-tabs>div .content::-webkit-scrollbar{
   height: 8px;
   }
-#source-code pre::-webkit-scrollbar-track, #editor-container::-webkit-scrollbar-track{
+#source-code pre::-webkit-scrollbar-track, #editor-container::-webkit-scrollbar-track, #dictionary-tabs>div .content::-webkit-scrollbar-track{
   background: #f8f9fa;
   }
-#source-code pre::-webkit-scrollbar-thumb, #editor-container::-webkit-scrollbar-thumb{
+#source-code pre::-webkit-scrollbar-thumb, #editor-container::-webkit-scrollbar-thumb, #dictionary-tabs>div .content::-webkit-scrollbar-thumb{
   background: #ccc;
   border-radius: 0px;
   }
-#source-code pre::-webkit-scrollbar-thumb:hover, #editor-container::-webkit-scrollbar-thumb:hover{
+#source-code pre::-webkit-scrollbar-thumb:hover, #editor-container::-webkit-scrollbar-thumb:hover, #dictionary-tabs>div .content::-webkit-scrollbar-thumb:hover{
   background: #bbb;
   }
 #source-code #save-container #save-article{
@@ -2611,4 +2614,196 @@ margin: auto;
 border: 1px solid #a2a9b1;
 border-top: 0;
 justify-content: left;
+}
+#dictionary-setup{
+width: 100%;
+border: 1px solid #c8ccd1;
+height: 200px;
+box-sizing: border-box;
+background-color: #f8f9fa;
+}
+#dictionary-error-message{
+color: red;
+font-weight: 600;
+font-size: 0.8rem;
+margin-left: 0.5rem;
+}
+#dictionary-setup.hidden{
+display: none;
+}
+#dictionary-tab-bar{
+width: 100%;
+border-bottom: 1px solid #c8ccd1;
+height: 2rem;
+display: flex;
+align-items: center;
+flex-direction: row;
+justify-content: center;
+background-color: #eeeeee;
+}
+#dictionary-tab-bar div{
+flex: 1;
+font-size: 0.8rem;
+font-weight: 600;
+white-space: nowrap;
+padding: 0 .5rem;
+display: flex;
+align-items: center;
+cursor: pointer;
+justify-content: center;
+box-sizing: border-box;
+height: 100%;
+transition: all 0.15s ease-in-out;
+}
+#dictionary-tab-bar div:hover{
+background-color: #e0e0e0;
+}
+#dictionary-tab-bar div.active{
+  background-color: #d3d3d3;
+}
+#dictionary-tab-bar div:not(:last-child){
+border-right: 1px solid #c8ccd1;
+}
+#dictionary-tabs{
+width: 100%;
+height: calc(100% - 2rem);
+}
+#dictionary-tabs div h2{
+    margin: 0.25em 0 0.25em 0;
+    padding-top: 0.4em;
+    padding-bottom: 0.1em;
+    font-weight: 700;
+    font-size: 1.25rem;
+}
+#dictionary-tabs>div{
+width: 100%;
+height: 100%;
+display: none;
+box-sizing: border-box;
+padding: 0.25rem;
+}
+#dictionary-tabs>div .content{
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  overflow-y: scroll;  
+}
+#dictionary-tabs div.active{
+display: block;
+}
+#dictionary-tabs>div .content::-webkit-scrollbar{
+  width: 8px;
+}
+#dictionary-tabs>div .content::-webkit-scrollbar-thumb{
+border-radius: 4px;
+}
+.list-type-input-list{
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+width: 100%;
+height: fit-content;
+}
+.list-type-input-container::before{
+  content: '•';
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 2rem;
+  margin-right: 0.5rem;
+  color: rgba(0, 0, 0, 0.75)
+}
+.list-type-input-container:last-child:not(:first-child){
+opacity: 0.5;
+}
+.list-type-input-container:last-child:hover, .list-type-input-container:last-child:active, .list-type-input-container:last-child:focus{
+opacity: 1;
+}
+.list-type-input-container{
+width: 80%;
+box-sizing: border-box;
+padding: 0.25rem 0.5rem;
+flex: 1;
+display: flex;
+flex-direction: row;
+transition: all 0.15s ease-in-out;
+}
+.list-type-input,
+#pronunciation input{
+outline: 0;
+border: 1px solid #f1f1f1;;
+border-bottom: 1px solid #c2c6ca;;
+font-family: 'montserrat', 'montserrat alternates', sans-serif;
+padding: 0.25rem;
+width: 100%;
+border-radius: 0.25rem;
+box-sizing: border-box;
+}
+#pronunciation input{
+height: 2rem;
+width: calc(100% - 1rem);
+margin: 0.5rem
+}
+#etymology textarea{
+width: calc(100% - 1rem);
+margin: 0.5rem;
+height: 6rem;
+resize: none;
+padding: 0.25rem;
+font-family: 'montserrat', 'montserrat alternates', sans-serif;
+outline: 0;
+border-radius: 0.25rem;
+border: 1px solid #f1f1f1;
+border-bottom: 1px solid #c2c6ca;
+box-sizing: border-box;
+}
+.inflection-table{
+  text-align: left;
+  font-size: 85%;
+  border: 1px solid #a2a9b1;
+  background-color: #f8f9fa;
+  border-collapse: collapse;
+  margin: 0 0.8rem 0.8rem 0.8rem;
+  min-width: 50%;
+  width: fit-content;
+  max-width: 100%;
+  margin-left: 0;
+}
+.inflection-table th,
+.inflection-table td{
+  font-weight: 500;
+    box-sizing: border-box;
+    padding: min(0.25vw, 0.25rem) min(0.5vw, 0.5rem);
+    vertical-align: top;
+    word-wrap: break-word;
+    border: 1px solid #a2a9b1;
+    border-collapse: collapse;
+    font-size: min(1.5vw, 1rem);
+    vertical-align: middle;
+}
+.inflection-table th{
+  font-weight: bold;
+  background-color: #eee;
+  }
+  .inflection-table td input{
+  border: 0;
+  outline: 0;
+  padding: 0;
+  background-color: transparent;
+  font-family: 'montserrat';
+  font-weight: 500;
+  font-size: 1rem;
+  }
+th.inflection-lm,
+td.inflection-lm{
+opacity: 0.25;
+border-color: #e9e9e9;
+transition: all 0.15s ease-in-out;
+}
+table.lm-included th.inflection-lm,
+table.lm-included td.inflection-lm{
+opacity: 1;
+border-color: #a2a9b1;
+}
+article table{
+color: #111;
 }
