--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   color: white;
   background-color: #101920;
-  font-family: "Montserrat", "Montserrat Alternates", sans-serif;
+  font-family: "Montserrat", "Montserrat Alternates", "Geologica", sans-serif;
   }
   header#pageheader nav>a{
   display: contents;
@@ -431,11 +431,46 @@
   border: 1px solid #a2a9b1;
   background-color: #f8f9fa;
   border-collapse: collapse;
-  margin: 0 0.8rem 0.8rem 0.8rem;
-  min-width: 50%;
+  margin: 0 0 0.8rem 0.8rem;
   width: fit-content;
-  max-width: 100%;
   margin-left: 0;
+  }
+  .table-wrapper::-webkit-scrollbar{
+    height: 8px;
+    }
+    .table-wrapper::-webkit-scrollbar-track{
+    background: white;
+    }
+    .table-wrapper::-webkit-scrollbar-thumb{
+    background: #ccc;
+    border-radius: 4px;
+    }
+    .table-wrapper::-webkit-scrollbar-thumb:hover{
+    background: #bbb;
+    }
+    .table-wrapper-container{
+    width: fit-content;
+    max-height: fit-content;
+    max-width: 100%;
+    height: fit-content;
+    position: relative;
+    box-sizing: border-box;
+    }
+    .table-wrapper-container::after{
+    position: absolute;
+    height: calc(100% - 8px);
+    width: 3rem;
+    background-image: linear-gradient(to right, transparent 0, rgba(255,255,255, 1) 100%);
+    top: 0;
+    right: 0;
+    content: "";
+    }
+  .table-wrapper{
+  max-width: 100%;
+  position: relative;
+  box-sizing: border-box;
+  width: fit-content;
+  overflow-x: auto;
   }
   article table:not(.infobox, .ibox) th,
   article table:not(.infobox, .ibox) td,
@@ -452,6 +487,13 @@
   border-collapse: collapse;
   font-size: min(1.5vw, 1rem);
   vertical-align: middle;
+  }
+  article table:not(.infobox, .ibox) th,
+  article table:not(.infobox, .ibox) td{
+  white-space: nowrap;
+  padding: 0.25rem 0.5rem;
+  font-size: 1rem;
+  width: 100%;
   }
   @media screen and (max-width: 500px){
   article table.infobox{
@@ -2850,72 +2892,72 @@ display: flex;
 .cell-background-color-clear {
   background-color: white !important;
 }
-.cell-background-color-clear_top {
+.cell-background-color-clear_top, .cell-background-color-clear_t{
   border-top-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_bottom {
+.cell-background-color-clear_bottom, .cell-background-color-clear_b{
   border-bottom-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_left {
+.cell-background-color-clear_left, .cell-background-color-clear_l{
   border-left-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_right {
+.cell-background-color-clear_right, .cell-background-color-clear_r{
   border-right-color: white !important;
   background-color: white !important;
 }
 
-.cell-background-color-clear_top_bottom {
+.cell-background-color-clear_top_bottom, .cell-background-color-clear_tb{
   border-top-color: white !important;
   border-bottom-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_top_left {
+.cell-background-color-clear_top_left, .cell-background-color-clear_tl{
   border-top-color: white !important;
   border-left-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_top_right {
+.cell-background-color-clear_top_right, .cell-background-color-clear_tr{
   border-top-color: white !important;
   border-right-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_bottom_left {
+.cell-background-color-clear_bottom_left, .cell-background-color-clear_bl{
   border-bottom-color: white !important;
   border-left-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_bottom_right {
+.cell-background-color-clear_bottom_right, .cell-background-color-clear_br{
   border-bottom-color: white !important;
   border-right-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_left_right {
+.cell-background-color-clear_left_right, .cell-background-color-clear_lr{
   border-left-color: white !important;
   border-right-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_top_bottom_left {
+.cell-background-color-clear_top_bottom_left, .cell-background-color-clear_tbl{
   border-top-color: white !important;
   border-bottom-color: white !important;
   border-left-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_top_bottom_right {
+.cell-background-color-clear_top_bottom_right, .cell-background-color-clear_tbr{
   border-top-color: white !important;
   border-bottom-color: white !important;
   border-right-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_top_left_right {
+.cell-background-color-clear_top_left_right, .cell-background-color-clear_tlr{
   border-top-color: white !important;
   border-left-color: white !important;
   border-right-color: white !important;
   background-color: white !important;
 }
-.cell-background-color-clear_bottom_left_right {
+.cell-background-color-clear_bottom_left_right, .cell-background-color-clear_blr{
   border-bottom-color: white !important;
   border-left-color: white !important;
   border-right-color: white !important;
@@ -2982,4 +3024,43 @@ transition: all 0.3s ease-out;
 }
 #update-preview-button:active i{
 transform: rotate(360deg);
+}
+#table-setup{
+  width: 450%;
+  box-sizing: border-box;
+  padding: 1rem;
+}
+#table-setup h3{
+
+  margin-top: 0.5rem;
+  margin-bottom: 0.75rem;
+}
+#table-setup input{
+width: 4rem;
+margin-right: 0.5rem;
+margin-bottom: 0.5rem;
+float: right;
+vertical-align: top;
+justify-content: right;
+font-family: 'Montserrat', 'Montserrat Alternates', 'Geologica';
+text-align: right;
+}
+#table-setup input[type="number"]{
+width: 2rem;
+}
+#table-setup input[type="checkbox"]{
+margin-right: 0;
+width: fit-content;
+margin-right: 0.5rem;
+}
+#table-setup div{
+display: none;
+flex-direction: row;
+}
+.toolbar-button-select-container:hover #table-setup div{
+display: flex;
+}
+#table-setup span{
+  margin-bottom: 0.5rem;
+  margin-right: auto;
 }
